samples/_failures_safe/1761318127_cf8553_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_051edf99.c: In function ‘main’:
./samples/SAFE/__tmp_051edf99.c:172:12: error: missing terminating " character
  172 |     printf("Decompressed data (%zu bytes):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_051edf99.c:172:5: error: expected expression at end of input
  172 |     printf("Decompressed data (%zu bytes):
      |     ^~~~~~
./samples/SAFE/__tmp_051edf99.c:172:5: error: expected declaration or statement at end of input
